# AdventOfCode2024

./: .clangd  .gitignore  CMakeLists.txt  README.md  main.cpp
include/days/: day01.hpp  day02.hpp  day03.hpp  day04.hpp  day05.hpp  day06.hpp  day07.hpp  day08.hpp  day09.hpp  day10.hpp  day11.hpp  day12.hpp  day13.hpp  day14.hpp  day15.hpp  day16.hpp  day17.hpp  day18.hpp  day19.hpp  day20.hpp  day21.hpp  day22.hpp  day23.hpp  day24.hpp  day25.hpp
include/utils/: input_handler.hpp  math_utils.hpp  string_utils.hpp
src/days/: day01.cpp  day02.cpp  day03.cpp  day04.cpp  day05.cpp  day06.cpp  day07.cpp  day08.cpp  day09.cpp  day10.cpp  day11.cpp  day12.cpp  day13.cpp  day14.cpp  day15.cpp  day16.cpp  day17.cpp  day18.cpp  day19.cpp  day20.cpp  day21.cpp  day22.cpp  day23.cpp  day24.cpp  day25.cpp
src/utils/: input_handler.cpp  math_utils.cpp  string_utils.cpp
tests/: CMakeLists.txt  test_days.cpp  test_main.cpp  test_utils.cpp
